@@ -1,3 +1,8 @@
+2004-01-31  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* properties.c: Fix a crasher where list_view was not set to NULL
+	at the right time. Bug #132047.
+
 2003-11-19  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* Makefile.am (CLEANFILES): Clean up the schema data after
